--- a/index.html
+++ b/index.html
@@ -10,101 +10,180 @@
   <link rel="icon" href="images/favicon.png" type="image/png" />
   <link rel="stylesheet" href="main.css">
   <link href="https://fonts.googleapis.com/css?family=Handlee|Shadows+Into+Light" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 
 <body>
-  <header id="header">
-    <img src="images/logo.jpg" alt="logo">
-    <nav class="nav">
-      <ul>
-        <li><a href="#home">Home Page</a></li>
-        <li><a href="#chisiamo">Chi Siamo</a></li>
-        <li><a href="#eventi">Eventi</a></li>
-        <li><a href="#foto">Foto Varie</a></li>
-        <li><a href="#contatti">Contatti</a></li>
-        <li><a href="#links_sponsors">Links / Sponsors</a></li>
-      </ul>
-    </nav>
+  <div class="container">
+    <section id="home" class="row">
+      <header id="header" class="row navbar fixed-top">
+        <img src="images/logo.jpg" alt="logo" class=" logo col-lg-4">
 
-  </header>
-  <!-- /header -->
+        <nav class="navbar navbar-expand-md navbar-dark">
+<!--           <a class="navbar-brand" href="#home">Home Page</a> -->
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="#home">Home Page<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#chisiamo">Chi Siamo</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#eventi">Eventi</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#foto">Foto Varie</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contatti">Contatti</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#links_sponsors">Links / Sponsors</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
 
-  <section id="home">
-    <h1>Gruppo Podistico "PRETUZI RUNNERS TERAMO ASD" 2016</h1>
-    <img src="images/pretuzi-foto-1-maggio-2017.jpg" alt="foto gruppo 1 maggio">
-    <h2>"Non importa a quanto vai... <br>l'importante è che vai..."</h2>
-  </section>
+        <!--         <nav class="col-lg-8">
+          <ul class="nav">
+            <li><a class="nav-link" href="#home">Home Page</a></li>
+            <li><a class="nav-link" href="#chisiamo">Chi Siamo</a></li>
+            <li><a class="nav-link" href="#eventi">Eventi</a></li>
+            <li><a class="nav-link" href="#foto">Foto Varie</a></li>
+            <li><a class="nav-link" href="#contatti">Contatti</a></li>
+            <li><a class="nav-link" href="#links_sponsors">Links / Sponsors</a></li>
+          </ul>
+        </nav> -->
 
-  <section id="chisiamo">
-    <h1>Chi Siamo...</h1>
-    <p>IL GRUPPO PODISTICO <span>"PRETUZI RUNNERS TERAMO ASD"</span> NASCE NEL 2016 DA AMICI CHE CONDIVIDONO LA PASSIONE PER QUESTO SPORT. L'AMICIZIA, LA CORSA, LO STARE INSIEME CON LA PARTECIPAZIONE A GARE COMPETITIVE E NON, PER IL SOLO PIACERE DI FARE SPORT, SOCIALIZZARE E STAR BENE, E' IL NOSTRO UNICO FINE. LA NOSTRA E' UNA SOCIETA' CHE SI IDENTIFICA TERRITORIALMENTE NEL TERAMANO, MA CHE ABBRACCIA ANCHE TANTI AMICI DI ALTRE CITTA' E REGIONI CHE CONDIVIDONO L'AMICIZIA CON UN INTERSCAMBIO DI IDEE, DI PROGETTI E CHE CI SEGNALANO MANIFESTAZIONI NEI LORO TERRITORI, A CUI NOI PARTECIPIAMO. SIAMO CONVENZIONATI CON PALESTRE, DOVE MOLTI SPORTIVI SI DEDICANO ANCHE ALLA CORSA SU STRADA, E ORGANIZZIAMO ANCHE EVENTI DI INTERESSE COLLETTIVO. VOGLIAMO ESSERE L'ALTERNATIVA A CHI DI QUESTO SPORT VUOLE FARE SOLO UNA COMPETIZIONE... NOI VOGLIAMO CONDIVIDERE LA PASSIONE PER IL PODISMO ALL'ARIA APERTA, PER DIVERTIRCI E SVAGARCI.</p>
-    <h2>"...Non realizziamo sogni, li alleniamo!..."</h2>
-  </section>
+      </header>
+      <!-- /header -->
 
-  <section id="eventi">
-    <h1>I nostri Eventi</h1>
-    <img src="images/corsa_amicizia_2016.jpg" alt="corsa_amicizia_2016">
-    <img src="images/1-corsa-del-gran-sasso.jpg" alt="1_corsa_GranSasso2017">
-  </section>
+      <h1 class="col-lg-12">Gruppo Podistico "PRETUZI RUNNERS TERAMO ASD" 2016</h1>
+      <img src="images/pretuzi-foto-1-maggio-2017.jpg" alt="foto gruppo 1 maggio" class="gruppo col-lg-7">
+      <h2 class="col-lg-5">"Non importa a quanto vai... <br>l'importante è che vai..."</h2>
+    </section>
 
-  <section id="foto">
-    <h1>Foto Varie</h1>
-    <a href="images/foto_gruppo2.jpg" target="_blank"><img src="images/foto_gruppo2.jpg" alt="foto gruppo"></a>
-    <a href="images/foto_gruppo3.jpg" target="_blank"><img src="images/foto_gruppo3.jpg" alt="foto gruppo"></a>
-    <a href="images/foto_gruppo7.jpg" target="_blank"><img src="images/foto_gruppo7.jpg" alt="foto gruppo"></a>
-    <a href="images/foto_gruppo8.jpg" target="_blank"><img src="images/foto_gruppo8.jpg" alt="foto gruppo"></a>
-    <a href="images/foto_gruppo1.jpg" target="_blank"><img src="images/foto_gruppo1.jpg" alt="foto gruppo"></a>
-    <a href="images/foto_gruppo9.jpg" target="_blank"><img src="images/foto_gruppo9.jpg" alt="foto gruppo"></a>
-    <a href="images/foto_gruppo6.jpg" target="_blank"><img src="images/foto_gruppo6.jpg" alt="foto gruppo"></a>
-    <a href="images/foto_gruppo11.jpg" target="_blank"><img src="images/foto_gruppo11.jpg" alt="foto gruppo"></a>
-    <a href="images/foto_gruppo12.jpg" target="_blank"><img src="images/foto_gruppo12.jpg" alt="foto gruppo"></a>
-    <a href="images/foto_gruppo13.jpg" target="_blank"><img src="images/foto_gruppo13.jpg" alt="foto gruppo"></a>
-    <a href="images/foto_gruppo14.jpg" target="_blank"><img src="images/foto_gruppo14.jpg" alt="foto gruppo"></a>
-    <a href="images/foto_gruppo16.jpg" target="_blank"><img src="images/foto_gruppo16.jpg" alt="foto gruppo"></a>
-    <a href="images/foto_gruppo15.jpg" target="_blank"><img src="images/foto_gruppo15.jpg" alt="foto gruppo"></a>
-    <a href="images/foto_gruppo5.jpg" target="_blank"><img src="images/foto_gruppo5.jpg" alt="foto gruppo"></a>
-    <a href="images/foto_gruppo17.jpg" target="_blank"><img src="images/foto_gruppo17.jpg" alt="foto gruppo"></a>
-    <a href="images/foto_gruppo4.jpg" target="_blank"><img src="images/foto_gruppo4.jpg" alt="foto gruppo"></a>
-    <a href="images/foto_gruppo10.jpg" target="_blank"><img src="images/foto_gruppo10.jpg" alt="foto gruppo"></a>
+    <section id="chisiamo" class="row">
+      <h1 class="col-lg-12">Chi Siamo...</h1>
+      <p class="col-lg-12">IL GRUPPO PODISTICO <span>"PRETUZI RUNNERS TERAMO ASD"</span> NASCE NEL 2016 DA AMICI CHE CONDIVIDONO LA PASSIONE PER QUESTO SPORT. L'AMICIZIA, LA CORSA, LO STARE INSIEME CON LA PARTECIPAZIONE A GARE COMPETITIVE E NON, PER IL SOLO PIACERE DI FARE SPORT, SOCIALIZZARE E STAR BENE, E' IL NOSTRO UNICO FINE. LA NOSTRA E' UNA SOCIETA' CHE SI IDENTIFICA TERRITORIALMENTE NEL TERAMANO, MA CHE ABBRACCIA ANCHE TANTI AMICI DI ALTRE CITTA' E REGIONI CHE CONDIVIDONO L'AMICIZIA CON UN INTERSCAMBIO DI IDEE, DI PROGETTI E CHE CI SEGNALANO MANIFESTAZIONI NEI LORO TERRITORI, A CUI NOI PARTECIPIAMO. SIAMO CONVENZIONATI CON PALESTRE, DOVE MOLTI SPORTIVI SI DEDICANO ANCHE ALLA CORSA SU STRADA, E ORGANIZZIAMO ANCHE EVENTI DI INTERESSE COLLETTIVO. VOGLIAMO ESSERE L'ALTERNATIVA A CHI DI QUESTO SPORT VUOLE FARE SOLO UNA COMPETIZIONE... NOI VOGLIAMO CONDIVIDERE LA PASSIONE PER IL PODISMO ALL'ARIA APERTA, PER DIVERTIRCI E SVAGARCI.</p>
+      <h2 class="col-lg-12">"...Non realizziamo sogni, li alleniamo!..."</h2>
+    </section>
 
-  </section>
+    <section id="eventi" class="row">
+      <h1 class="col-lg-12">I nostri Eventi</h1>
+      <img src="images/corsa_amicizia_2016.jpg" alt="corsa_amicizia_2016" class="col-lg-6">
+      <img src="images/1-corsa-del-gran-sasso.jpg" alt="1_corsa_GranSasso2017" class="col-lg-6">
+    </section>
 
-  <section id="contatti">
-    <h1>Contatti</h1>
-    <p>Pretuzi Runners Teramo ASD - Via Del Castello, 16 - 64100 Teramo - P.I. 01947320675</p>
-    <p>Mail: <a href="mailto:info@pretuzirunnersteramo.it">info@pretuzirunnersteramo.it</a></p>
-    <p>Presidente (Carlo Franchi):
-      <br><a href="mailto:presidente@pretuzirunnresteramo.it">presidente@pretuzirunnresteramo.it</a>
-      <br>tel. 328.3290635</p>
-    <p>Segretario (Massimo Giovannozzi):
-      <br><a href="mailto:presidente@pretuzirunnresteramo.it">segretario@pretuzirunnresteramo.it</a></p>
-  </section>
+    <section id="foto" class="row">
+      <h1 class="col-lg-12">Foto Varie</h1>
 
-  <section id="links_sponsors">
-    <div class="links">
-      <h1>Links</h1>
-      <a href="http://www.csi-net.it/" target="_blank"><img src="images/csi-vero.gif" alt="csi"></a>
-      <a href="http://www.piceniepretuzirunning.it/" target="_blank"><img src="images/immagini-criterium.png" alt="criterium"></a>
-      <a href="http://www.fidal.it/" target="_blank"><img src="images/fidal-logo.png" alt="fidal"></a>
-      <a href="https://www.corrilabruzzo.it/index.php/it/" target="_blank"><img src="images/corrilabruzzo-marchio.png" alt="corriabruzzo"></a>
-    </div>
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="false">
+        <div class="carousel-inner col-lg-12">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="images/foto_gruppo3.jpg" alt="foto gruppo">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/foto_gruppo7.jpg" alt="foto gruppo">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/foto_gruppo8.jpg" alt="foto gruppo">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/foto_gruppo9.jpg" alt="foto gruppo">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/foto_gruppo6.jpg" alt="foto gruppo">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/foto_gruppo11.jpg" alt="foto gruppo">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/foto_gruppo12.jpg" alt="foto gruppo">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/foto_gruppo13.jpg" alt="foto gruppo">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/foto_gruppo14.jpg" alt="foto gruppo">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/foto_gruppo16.jpg" alt="foto gruppo">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/foto_gruppo15.jpg" alt="foto gruppo">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/foto_gruppo5.jpg" alt="foto gruppo">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/foto_gruppo17.jpg" alt="foto gruppo">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/foto_gruppo4.jpg" alt="foto gruppo">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images/foto_gruppo10.jpg" alt="foto gruppo">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+      </div>
 
-    <h1>I nostri Sponsors</h1>
-    <a href="http://www.calmea.it/index.html" target="_blank"><img src="images/calmea-intimo.png" alt="calmea_intimo"></a>
-    <a href="http://www.groupama.it/servizi-al-cliente/trova-agente/-/teramo-n00445" target="_blank"><img src="images/groupama.jpg" alt="groupama"></a>
-    <a href="http://www.futurimplant.it/" target="_blank"><img src="images/FUTUR-INPLANT.png" alt="future_inplant"></a>
-    <a href="http://www.interamniaclub.it/" target="_blank"><img src="images/interamnia-club-immagine.jpg" alt="club_interamnia"></a>
+    </section>
 
-  </section>
+    <section id="contatti" class="row">
+      <h1 class="col-lg-12">Contatti</h1>
+      <p class="col-lg-12">Pretuzi Runners Teramo ASD - Via Del Castello, 16 - 64100 Teramo - P.I. 01947320675</p>
+      <p class="col-lg-12">Mail: <a href="mailto:info@pretuzirunnersteramo.it">info@pretuzirunnersteramo.it</a></p>
+      <p class="col-lg-12">Presidente (Carlo Franchi):
+        <br><a href="mailto:presidente@pretuzirunnresteramo.it">presidente@pretuzirunnresteramo.it</a>
+        <br>tel. 328.3290635</p>
+      <p class="col-lg-12">Segretario (Massimo Giovannozzi):
+        <br><a href="mailto:presidente@pretuzirunnresteramo.it">segretario@pretuzirunnresteramo.it</a></p>
+    </section>
 
-  <footer>
-    <div class="myLinks">
-      <p>Created with love by Camillo</p>
-      <a href="https://github.com/cangelozzi" target="_blank"><img src="images/GitHub.png" alt="Camillo @ GitHub"></a>
-      <a href="https://www.linkedin.com/in/camillo-angelozzi-a0b5a229" target="_blank"><img src="images/linkedin.png" alt="Camillo @ Linkedin"></a>
-    </div>
-  </footer>
+    <section id="links_sponsors" class="row">
+      <div class="links">
+        <h1 class="col-lg-12">Links</h1>
+        <a class="col-lg-3" href="http://www.csi-net.it/" target="_blank"><img src="images/csi-vero.gif" alt="csi"></a>
+        <a class="col-lg-3" href="http://www.piceniepretuzirunning.it/" target="_blank"><img src="images/immagini-criterium.png" alt="criterium"></a>
+        <a class="col-lg-3" href="http://www.fidal.it/" target="_blank"><img src="images/fidal-logo.png" alt="fidal"></a>
+        <a class="col-lg-3" href="https://www.corrilabruzzo.it/index.php/it/" target="_blank"><img src="images/corrilabruzzo-marchio.png" alt="corriabruzzo"></a>
+      </div>
 
+      <div class="sponsors">
+        <h1 class="col-lg-12">I nostri Sponsors</h1>
+        <a class="col-lg-3" href="http://www.calmea.it/index.html" target="_blank"><img src="images/calmea-intimo.png" alt="calmea_intimo"></a>
+        <a class="col-lg-3" href="http://www.groupama.it/servizi-al-cliente/trova-agente/-/teramo-n00445" target="_blank"><img src="images/groupama.jpg" alt="groupama"></a>
+        <a class="col-lg-3" href="http://www.futurimplant.it/" target="_blank"><img src="images/FUTUR-INPLANT.png" alt="future_inplant"></a>
+        <a class="col-md-3" href="http://www.interamniaclub.it/" target="_blank"><img src="images/interamnia-club-immagine.jpg" alt="club_interamnia"></a>
+      </div>
+
+    </section>
+
+    <footer class="row">
+      <div class="copy myLinks col-md-12">
+        <p>Created with love by Camillo</p>
+        <a href="https://github.com/cangelozzi" target="_blank"><img src="images/GitHub.png" alt="Camillo @ GitHub"></a>
+        <a href="https://www.linkedin.com/in/camillo-angelozzi-a0b5a229" target="_blank"><img src="images/linkedin.png" alt="Camillo @ Linkedin"></a>
+      </div>
+    </footer>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 
 </html>
